--- a/Mod/Data/Core/Languages/English/Features.xml
+++ b/Mod/Data/Core/Languages/English/Features.xml
@@ -3,7 +3,9 @@
     <entry name="NullZone" value="<string name='Traits/NullZone'/>" />
     <entry name="NullZoneDescription" value="<string name='Traits/NullZoneDescription'/>" />
     <entry name="NullZoneFlavor" value="<string name='Traits/NullZoneFlavor'/>" />
+    <entry name="SacredGround" value="Sacred Ground"/>
+    <entry name="SacredGroundDescription" value="Feature that ends the movement of a unit and applies damage over time debuff to the enemy."/>
+    <entry name="SacredGroundFlavor" value="Reclaim the Emperor’s dominion and consecrate it once more."/>
     <entry name="ShatteredDefences" value="<string name='Traits/ShatteredDefences'/>"/>
     <entry name="ShatteredDefencesDescription" value="<string name='Traits/ShatteredDefencesDescription'/>"/>
-
 </language>
