--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -319,6 +319,9 @@
     <entry name="SistersOfBattle/HolyFireSelf" value="Holy Fire" />
     <entry name="SistersOfBattle/HolyFireSelfDescription" value="Applies damage over time debuff." />
     <entry name="SistersOfBattle/HolyFireSelfFlavor" value="Fed by auxiliary fuel lines, this transport’s braziers are made to flare with holy fire, tinged with sacred unguents and rare resins" />
+    <entry name="SistersOfBattle/ThePassionSelf" value="<string name='Actions/SistersOfBattle/ThePassion'/>"/>
+    <entry name="SistersOfBattle/ThePassionSelfDescription" value="Increases the armour."/>
+    <entry name="SistersOfBattle/ThePassionSelfFlavor" value="<string name='Actions/SistersOfBattle/ThePassionFlavor'/>"/>
     <entry name="SistersOfBattle/TwoAdditionalMultiMeltas" value="Installed Multi Meltas" />
     <entry name="SistersOfBattle/TwoAdditionalMultiMeltasDescription" value="Grants additional multi meltas." />
     <entry name="SistersOfBattle/UpgradedMultiMelta" value="Upgraded Multi Melta" />
