--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -303,6 +303,7 @@
     <entry name="SistersOfBattle/BlindingRadianceEnemy" value="Blinding Radiance" />
     <entry name="SistersOfBattle/BlindingRadianceEnemyDescription" value="Decreases the accuracy." />
     <entry name="SistersOfBattle/BlindingRadianceEnemyFlavor" value="The Emperor’s own divinity is made manifest from this warrior’s golden halo, blinding the enemy with holy light." />
+    <entry name="SistersOfBattle/CatechismOfRepugnanceDescription" value="Decreases the accuracy and the attack range."/>
     <entry name="SistersOfBattle/ChadMultiMelta" value="Upgraded Multi Melta" />
     <entry name="SistersOfBattle/ChadMultiMeltaDescription" value="Increases the maximum range and the accuracy." />
     <entry name="SistersOfBattle/Prosperity" value="Prosperity" />
@@ -319,6 +320,7 @@
     <entry name="SistersOfBattle/HolyFireSelf" value="Holy Fire" />
     <entry name="SistersOfBattle/HolyFireSelfDescription" value="Applies damage over time debuff." />
     <entry name="SistersOfBattle/HolyFireSelfFlavor" value="Fed by auxiliary fuel lines, this transport’s braziers are made to flare with holy fire, tinged with sacred unguents and rare resins" />
+    <entry name="SistersOfBattle/StirringRhetoricDescription" value="Increases the damage taken."/>
     <entry name="SistersOfBattle/ThePassionSelf" value="<string name='Actions/SistersOfBattle/ThePassion'/>"/>
     <entry name="SistersOfBattle/ThePassionSelfDescription" value="Increases the armour."/>
     <entry name="SistersOfBattle/ThePassionSelfFlavor" value="<string name='Actions/SistersOfBattle/ThePassionFlavor'/>"/>
@@ -328,6 +330,9 @@
     <entry name="SistersOfBattle/UpgradedMultiMeltaDescription" value="Increases the maximum range and the accuracy of multi meltas." />
     <entry name="SistersOfBattle/Vengeance" value="Vengeance" />
     <entry name="SistersOfBattle/VengeanceDescription" value="Increases the accuracy." />
+    <entry name="SistersOfBattle/VerseOfHolyPiety" value="Verse of Holy Piety"/>
+    <entry name="SistersOfBattle/VerseOfHolyPietyDescription" value="Disables the morale regeneration."/>
+    <entry name="SistersOfBattle/VerseOfHolyPietyFlavor" value="Pray is stronger than any sword. As the sanctified words of the Order’s holy tenets are roared across the battlefield, the devout are infused with the Emperor’s blessings."/>
 
     <entry name="SmokeScreenDescription" value="Decreases opponent's ranged accuracy." />
 
