--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -124,6 +124,8 @@
 
     <entry name="ChaosSpaceMarines/BloatedWithLifesteal"
            value="<string name='Traits/ChaosSpaceMarines/BloatedWithLifesteal'/>"/>
+    <entry name="ChaosSpaceMarines/MeltaBombDescription"
+           value="Grants Chaos Lord, Havocs and Khorne Berzerkers the ability to deploy a melta bomb that is highly effective against heavy vehicles and fortifications."/>
     <entry name="ChaosSpaceMarines/BloatedWithLifestealDescription"
            value="Grants Champions of Chaos ability to restore percentage of maximum health after attack."/>
     <entry name="ChaosSpaceMarines/BloatedWithLifestealFlavor"
