--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -62,6 +62,14 @@
            value="Installed Heavy Bolters"/>
     <entry name="AstraMilitarum/AdditionalHeavyBoltersDescription"
            value="Grants additional heavy bolters."/>
+    <entry name="AstraMilitarum/Ambush"
+           value="Ambush"/>
+    <entry name="AstraMilitarum/AmbushDescription"
+           value="Increases the attacks of overwatch attacks."/>
+    <entry name="AstraMilitarum/BattleHonour"
+           value="Battle Honour"/>
+    <entry name="AstraMilitarum/BattleHonourDescription"
+           value="Increases the experience gain rate."/>
     <entry name="AstraMilitarum/BoltDamage"
            value="The Emperor's Benediction"/>
     <entry name="AstraMilitarum/BoltDamageDescription"
@@ -128,6 +136,14 @@
            value="Prosperity"/>
     <entry name="AstraMilitarum/ProsperityDescription"
            value="Increases city growth"/>
+    <entry name="AstraMilitarum/SeniorOfficerTempestus"
+           value="Senior Officer"/>
+    <entry name="AstraMilitarum/SeniorOfficerTempestusDescription"
+           value="Increases the accuracy."/>
+    <entry name="AstraMilitarum/SeniorOfficerValkyrie"
+           value="Senior Officer"/>
+    <entry name="AstraMilitarum/SeniorOfficerValkyrieDescription"
+           value="Increases the accuracy."/>
     <entry name="AstraMilitarum/UpgradedLascannon"
            value="Upgraded Lascannon"/>
     <entry name="AstraMilitarum/UpgradedLascannonDescription"
