--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -59,6 +59,10 @@
            value="Increases the ranged accuracy of adjacent allied vehicle or fortification units."/>
     <entry name="AstraMilitarum/AwakenTheMachineFlavor"
            value="“With push of Button fire the Engine<br/>And spark Turbine into life…<br/>Toll the Great Bell Thrice!<br/>Sing Praise to the<br/>God of All Machines”<br/>  — Catechism of the Autoculus of Mars"/>
+    <entry name="AstraMilitarum/DefendersOfImperium"
+           value="Defenders Of Imperium"/>
+    <entry name="AstraMilitarum/DefendersOfImperiumDescription"
+           value="Reduces the accuracy of ranged attack against adjacent infantry units."/>
     <entry name="AstraMilitarum/DeployVoidShieldGenerator"
            value="Deploy Void Shield Generator"/>
     <entry name="AstraMilitarum/DeployVoidShieldGeneratorDescription"
